# mpss

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ISSUES.md  README.md  es-metadata.yml  vcpkg-configuration.json  vcpkg.json
cmake/: FindYKPIV.cmake  mpssConfig.cmake.in
mpss/: CMakeLists.txt  algorithm.h  config.h.in  defines.h  interaction_handler.h  key_info.h  key_policy.h  log.cpp  log.h  log_c.h  mpss.cpp  mpss.h  secure_types.h  stdout_log.cpp
mpss-openssl/: .clang-tidy  CMakeLists.txt  api.cpp  api.h  defines.h  interaction_handler.cpp  interaction_handler.h  log.h
mpss-openssl/provider/: CMakeLists.txt  digest.cpp  digest.h  encoder.cpp  encoder.h  keymgmt.cpp  keymgmt.h  provider.cpp  provider.h  signature.cpp  signature.h
mpss-openssl/utils/: CMakeLists.txt  memory.h  names.cpp  names.h  ossl_helpers.cpp  utils.h
mpss/impl/: CMakeLists.txt  backend_registry.cpp  backend_registry.h  os_backend.cpp  os_backend.h
mpss/impl/android/: JNIHelper.cpp  JNIHelper.h  JNIObject.h  android_keypair.cpp  android_keypair.h  android_utils.cpp  mpss_impl.cpp
mpss/impl/android/java/: Utils.java
mpss/impl/apple/: CMakeLists.txt  apple_api_wrapper.h  apple_api_wrapper.m  apple_keychain_keypair.cpp  apple_keychain_keypair.h  apple_keypair.cpp  apple_keypair.h  apple_se_keypair.cpp  apple_se_keypair.h  apple_se_wrapper.h  apple_se_wrapper.swift  apple_utils.cpp  apple_utils.h  mpss_impl.cpp
mpss/impl/windows/: crypto_params.h  mpss_impl.cpp  win_keypair.cpp  win_keypair.h  win_utils.cpp  win_utils.h
mpss/impl/yubikey/: .clang-tidy  CMakeLists.txt  mpss_impl.cpp  terminal_interaction_handler.cpp  yk_backend.cpp  yk_backend.h  yk_keypair.cpp  yk_keypair.h  yk_piv.cpp  yk_piv.h  yk_utils.cpp  yk_utils.h
mpss/implementations/: CMakeLists.txt  backend_registry.cpp  backend_registry.h  mpss_impl.h  os_backend.cpp  os_backend.h
mpss/implementations/android/: CMakeLists.txt  JNIHelper.cpp  JNIHelper.h  JNIObject.h  android_keypair.cpp  android_keypair.h  android_utils.cpp  android_utils.h  mpss_impl.cpp
mpss/implementations/android/java/: Algorithm.java  CMakeLists.txt  KeyManagement.java  MemKeyStore.java  Utils.java
mpss/implementations/apple/: apple_api_wrapper.m  apple_keychain_keypair.cpp  apple_keychain_keypair.h  apple_keypair.cpp  apple_keypair.h  apple_se_keypair.cpp  apple_se_keypair.h  apple_se_wrapper.swift  apple_utils.cpp  mpss_impl.cpp
mpss/implementations/macos/: CMakeLists.txt  mac_api_wrapper.h  mac_api_wrapper.m  mac_keypair.cpp  mac_keypair.h  mac_se_keypair.cpp  mac_se_keypair.h  mac_se_wrapper.h  mac_se_wrapper.swift  mac_secure_enclave.swift  mac_utils.cpp  mac_utils.h  mpss_impl.cpp
mpss/implementations/windows/: CMakeLists.txt  crypto_params.h  ecdsa_p256.h  ecdsa_p384.h  ecdsa_p521.h  mpss_impl.cpp  p256.h  p384.h  p521.h  win_keypair.cpp  win_keypair.h  win_utils.cpp  win_utils.h
mpss/implementations/yubikey/: CMakeLists.txt  mpss_impl.cpp  terminal_interaction_handler.cpp  yk_keypair.cpp  yk_piv.cpp  yk_piv.h  yk_utils.cpp  yk_utils.h
mpss/utils/: CMakeLists.txt  scope_guard.h  utilities.cpp  utilities.h
pipelines/: android.yaml  ios.yaml  jobs.yaml  nix.yaml  pipeline-CI-Debug-All.yaml  pipeline-CI-Debug-Android.yaml  pipeline-CI-Release-All.yaml  windows.yaml
tests/: .clang-tidy  CMakeLists.txt  compat_env.h  example.cpp  mpss_openssl_e2e_test.cpp  mpss_openssl_tests.cpp  mpss_tests.cpp  simple_scenario.cpp  test_runner.cpp  vcpkg.json
tests/macos/: entitlements.plist
